--- a/mini-apps/1/index.html
+++ b/mini-apps/1/index.html
@@ -33,7 +33,7 @@
         </p>
     </div>
 </section>
-<div class="popup opened" id="popup">
+<div class="popup" id="popup">
     <div class="popup__content">
         <button id="popup__close">x</button>
         <p>Lorem ipsum dolor.</p>
