--- a/17/youtube/youtube.html
+++ b/17/youtube/youtube.html
@@ -13,10 +13,10 @@
 </head>
 <body class="p-2">
 <header>
-    <div class="px-10 flex bg-gray-500 h-16 items-center">
+    <form class="px-10 flex bg-gray-500 h-16 items-center" id="form">
         <input ID="search" class="mx-4 h-8" type="text" placeholder="Search">
-        <button id="submit" class="mr-4 bg-yellow-500 h-8 w-24">Найти видео</button>
-    </div>
+        <button id="submit" class="mr-4 bg-yellow-500 h-8 w-24" type="submit">Найти видео</button>
+    </form>
 </header>
 <main>
     <!--Current video-->
